--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -87,7 +87,9 @@
             <br>
         </div>
         <b>
-        <p><u>BOOK NOW</u></p>
+        <p>
+         <h3><u>BOOK NOW</u></h3>
+         </p>
         </b><br>
         <br>
         <div class="image-container">
