--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -6,6 +6,10 @@
     <title>TAFFYANNE GOLDEN JAR</title>
     <link rel="stylesheet" href="style.css">
     <style>
+        
+        h2{
+            text-align: center;
+        }
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -28,8 +32,8 @@
         }
 
         .product-display img {
-            max-width: 150px;
-            border-radius: 75px;
+            max-width: 200px;
+            border-radius: 100px;
         }
 
         .product-info {
@@ -67,18 +71,22 @@
         }
     </style>
 </head>
-<body>
+<body><br>
+    <br>
+    <h2><u>TAFFYANNE GOLDEN JAR!</u></h2>
     <div class="container">
         <div class="product-display">
             <img src="another 250 jar.jpg" alt="Peanut Butter Jar">
             <div class="product-info">
-                <h2><u>TAFFYANNE GOLDEN JAR</u></h2>
-                <p>Your go-to rich, creamy, and finest roasted peanuts. Enjoy the perfect spread for your bread, snacks, and desserts!
-                    Peanut Butter made with love and care to bring you the most authentic and delicious peanut butter experience. 
+               <p>Your go-to rich, creamy, and finest roasted peanuts. Enjoy the perfect spread for your bread, snacks, and desserts! 
+
+        <p>Peanut Butter made with love and care to bring you the most authentic and delicious peanut butter experience. 
             Packed with protein and natural flavors, it's a treat you can't resist.
                 </p>
-            </div>
+            </p>
         </div>
+    </div>
+
 
         <div class="description">
             <p>
@@ -88,8 +96,8 @@
         </div>
         <b>
         <p>
-         <h3><u>BOOK NOW</u></h3>
-         </p>
+            <h3><u>BOOK NOW</u></h3>
+        </p>
         </b><br>
         <br>
         <div class="image-container">
