--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -76,7 +76,7 @@
     <h2><u>TAFFYANNE GOLDEN JAR!</u></h2>
     <div class="container">
         <div class="product-display">
-            <img src="images/another 250 jar.jpg" alt="Peanut Butter Jar">
+            <img src="another 250 jar.jpg" alt="Peanut Butter Jar">
             <div class="product-info">
                <p>Your go-to rich, creamy, and finest roasted peanuts!
                </p>
@@ -100,28 +100,28 @@
         <br>
         <div class="image-container">
             <div class="image-item">
-                <img src="images/250 g.jpg" alt="Image of 250g of peanut butter">
+                <img src="250 g.jpg" alt="Image of 250g of peanut butter">
                 <b>
                 <p>250g of peanut butter</p>
                 <p>Ksh.150/=</p>
                 </b>
             </div>
             <div class="image-item">
-                <img src="images/peanut jar.jpg" alt="Image of 500g of peanut butter">
+                <img src="peanut jar.jpg" alt="Image of 500g of peanut butter">
                 <b>
                 <p>500g of peanut butter</p>
                 <p>Ksh.350/=</p>
                 </b>
             </div>
             <div class="image-item">
-                <img src="images/1kg jar.jpg" alt="Image of 1kg of peanut butter">
+                <img src="1kg jar.jpg" alt="Image of 1kg of peanut butter">
                 <b>
                 <p>1kg of peanut butter</p>
                 <p>Ksh.450/=</p>
                 </b>
             </div>
             <div class="image-item">
-                <img src="images/roasted.jpg" alt="Image of roasted peanuts">
+                <img src="roasted.jpg" alt="Image of roasted peanuts">
                 <b>
                 <p>Roasted peanuts</p>
                 </b>
