--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -71,7 +71,7 @@
         }
     </style>
 </head>
-<body><br>
+<body>
     <br>
     <h2><u>TAFFYANNE GOLDEN JAR!</u></h2>
     <div class="container">
